--- a/src/Components/CoinSearch/CoinSearch.css
+++ b/src/Components/CoinSearch/CoinSearch.css
@@ -1,7 +1,7 @@
 .coinSearchContainer {
     display: flex;
-    justify-content: left;
-    align-items: left;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     margin-top: 30px;
 }
